--- a/DeepFiberQ.ipynb
+++ b/DeepFiberQ.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMkWjEL8FNoBFI+FygBSPaz",
+      "authorship_tag": "ABX9TyMoWx+8RKLS/6JuWA5fnQur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,9 +111,13 @@
         "def save(df, mask, filepath):\n",
         "  output_csv = output / 'csv'/ (d.stem + '.csv')\n",
         "  output_mask = output/ 'mask' / (d.stem + '.png')\n",
+        "  output_color = output/ 'mask' / (d.stem + '.png')\n",
+        "\n",
         "  output_csv.parent.mkdir(exist_ok=True, parents=True)\n",
         "  output_mask.parent.mkdir(exist_ok=True, parents=True)\n",
+        "\n",
         "  cv2.imwrite(str(output_mask), mask.astype(np.uint8))\n",
+        "\n",
         "  df.to_csv(output_csv, index=False)\n"
       ],
       "metadata": {
