--- a/DeepFiberQ.ipynb
+++ b/DeepFiberQ.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMoWx+8RKLS/6JuWA5fnQur",
+      "authorship_tag": "ABX9TyOEor8j27jY7SQzv+yumQ3o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,12 +111,15 @@
         "def save(df, mask, filepath):\n",
         "  output_csv = output / 'csv'/ (d.stem + '.csv')\n",
         "  output_mask = output/ 'mask' / (d.stem + '.png')\n",
-        "  output_color = output/ 'mask' / (d.stem + '.png')\n",
+        "  output_color = output/ 'color' / (d.stem + '.png')\n",
         "\n",
         "  output_csv.parent.mkdir(exist_ok=True, parents=True)\n",
         "  output_mask.parent.mkdir(exist_ok=True, parents=True)\n",
+        "  output_color.parent.mkdir(exist_ok=True, parents=True)\n",
         "\n",
+        "  mask_color = convert_mask_to_image(mask, expand=10)\n",
         "  cv2.imwrite(str(output_mask), mask.astype(np.uint8))\n",
+        "  cv2.imwrite(str(output_color), mask_color[:,:,::-1])\n",
         "\n",
         "  df.to_csv(output_csv, index=False)\n"
       ],
